making divs/ ajusting img

--- a/style.css
+++ b/style.css
@@ -79,4 +79,8 @@ button{
 
 img{
     width: 30rem;
+    margin-right: auto;
+    margin-left: auto;
+    display:flex;
+    align-items: center;
 }
