--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ box-sizing: border-box;
 }
 
 :root{
-    --primary-color: hsl(170, 100%, 26%);
+    --primary-color: hsl(22, 100%, 50%);
     --headline: hsl(210, 11%, 15%);
     --paragraph: hsl(210, 9%, 31%);
     --brand-beige:  hsl(39, 100%, 97%);
@@ -29,7 +29,8 @@ body {
 }
 
 .wrapper {
-    width: 37.5rem;
+    /* width: 37.5rem; */
+    width: 80%;
     margin-inline: auto;
     padding-inline: 2.4rem;
 
@@ -70,6 +71,7 @@ header p{
     line-height: 150%;
     color: var(--paragraph);
     margin-bottom: 3.2rem;
+    display: flex;
 }
 
 header button{
@@ -140,15 +142,16 @@ header img{
 /*=============== Nav ========================================*/
 nav {
     display: flex;
-    
-   height: var(--nav-height);
+    justify-content: space-between;
+
+    height: var(--nav-height);
 
     position: fixed;
     top: 0;
     left: 50%;
     transform: translateX(-50%);
 }
-nav.wrapper{
+.wrapper{
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -158,5 +161,12 @@ nav.scroll {
     width: 100vw;
 }
 nav.scroll svg path {
-    fill: white;
+    fill: hsl(223, 100%, 21%);
+    stroke: hsl(223, 100%, 21%);
+}
+.logo{
+    width: 12rem;
+}
+.menu ul {
+    display: flex;
 }
