--- a/style.css
+++ b/style.css
@@ -103,6 +103,10 @@ header img{
     object-position: 0 1rem;
 }
 
+#iniial-text {
+    margin: 15rem;
+}
+
 .infos{
     width: 32.7rem;
     padding-block: 4rem;
@@ -136,6 +140,9 @@ header img{
 nav {
     display: flex;
     justify-content: center;
+       
+    justify-content: space-evenly;
+
 
     height: var(--nav-height);
 
@@ -143,9 +150,7 @@ nav {
     top: 0;
     left: 50%;
     transform: translateX(-50%);
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
+    
     width: 80%;
     margin-inline: auto;
     padding-inline: 2.4rem;
@@ -158,6 +163,23 @@ nav.scroll svg path {
     fill: hsl(223, 100%, 21%);
     stroke: hsl(223, 100%, 21%);
 }
+nav.scroll ul li {
+    margin: 0 1rem;
+    list-style: none;
+
+}
+.menu li a{
+    color:#333; text-decoration:none; padding:5px 10px; display:flex;
+}
+
+.menu li a:hover{
+background:#333;
+color:#fff;
+-moz-box-shadow:0 3px 10px 0 #CCC;
+-webkit-box-shadow:0 3px 10px 0 #ccc;
+text-shadow:0px 0px 5px #fff;
+}
+
 .logo{
     width: 12rem;
 }
@@ -171,13 +193,16 @@ nav.scroll svg path {
     outline: none;
 }
 
+
+/*================= media-querry ==================*/
 @media only screen and (max-width: 76.7rem) {
     nav.scroll ul {
         display: none;
+        width: 100%;
+        flex-direction: column;
     }
     #nav-ul.show {
-        display: flex;
-        
+        display: flex;        
         
     }
     .hamburger {
@@ -194,10 +219,6 @@ nav.scroll svg path {
     nav.scroll ul {
         display: flex;
 
-    }
-    nav.scroll ul li {
-        margin: 0 1rem;
-        list-style: none;
     }
 }
 
