--- a/style.css
+++ b/style.css
@@ -24,19 +24,33 @@ body {
     font-family: 'DM Sans';
     font-size: 1.6rem;
     text-align: center;
+    background-color:var(--brand-light) ;
+    
 
    
 }
+/*=============== Header sobre ========================================*/
+.sobre{
 
+}
+/*=============== Header-exercicio ========================================*/
+#exercicios{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin:15rem;
+}
 /*=============== Header ========================================*/
 header{
     
     margin-top: calc(4.1rem + var(--nav-height));
+    
 }
-header::before{
+/* header::before{
     content: "";
     width: 100vw;
-    height: calc(108rem + var(--nav-height));
+    height: calc(100vh + var(--nav-height));
     background-color:var(--brand-light);
     display: block;
     
@@ -44,7 +58,7 @@ header::before{
     top: 0rem;
     left: 0rem;
     z-index: -1;
-}
+} */
 header h4{
     font-size: 1.4rem;
     color: var(--primary-color);
@@ -182,10 +196,6 @@ color:#fff;
 -webkit-box-shadow:0 3px 10px 0 #ccc;
 text-shadow:0px 0px 5px #fff;
 }
-
-/* .logo{
-    width: 12rem;
-} */
 .hamburger{
     background-color: transparent;
     border: 0;
