--- a/style.css
+++ b/style.css
@@ -30,8 +30,14 @@ body {
    
 }
 /*=============== Header sobre ========================================*/
-.sobre{
-
+#sobreId {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
+    padding-block: 15rem;
 }
 /*=============== Header-exercicio ========================================*/
 #exercicios{
