--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@ header h4{
     font-size: 1.4rem;
     color: var(--primary-color);
     margin-bottom: 1.6rem;
+    margin-top: 2rem;
 }
 
 header h1{
@@ -279,11 +280,7 @@ footer{
         margin-bottom: 3.2rem;
         object-position: 0 1rem;
     }
-    .exercicios{
-        width: 80%;
-    }
-
-   
+     
 }
 
 @media screen and (min-width: 76.8rem) {
