--- a/style.css
+++ b/style.css
@@ -177,7 +177,7 @@ body .agachamento,.abdominal,.triceps,.flexao,.barras-paralelas{
 /*=============== Nav ========================================*/
 nav {
     display: flex;       
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
 
 
@@ -280,6 +280,11 @@ footer{
         margin-bottom: 3.2rem;
         object-position: 0 1rem;
     }
+    body .agachamento,.abdominal,.triceps,.flexao,.barras-paralelas{
+        background-color: #fff;
+        border-radius: 2rem;
+        width: auto;
+    }
      
 }
 
@@ -298,13 +303,24 @@ footer{
 
     .infos{
         width: 100vw;
-        padding: 0 4rem 0 4rem;
-        margin: 0 2rem 0 2rem;
+        padding: 2rem    4rem 2rem 4rem;
+        margin: 2rem 2rem 2rem 0;
     
         display: flex;
         flex-direction: row
     
         
+    }
+
+    body .agachamento,.abdominal,.triceps,.flexao,.barras-paralelas{
+        background-color: #fff;
+        border-radius: 2rem;
+        width: 800px;
+    }
+
+    .video{
+        width: auto;
+        height: auto;
     }
 
     
